<resources>
    <string name="app_name">HomePlantationAdmin</string>
    <string name="title_activity_slpash_screen">SlpashScreen</string>
    <string name="email">Enter Email Address</string>
    <string name="password">Enter Password</string>
    <string name="singup">SingUp</string>
    <string name="btn_forgot_password">Forgot Your Password?</string>
    <string name="btn_link_to_login">Already Registered. Login Me!</string>
    <string name="login">Login</string>
    <string name="newuser">New Registration,Click Here!</string>
    <string name="minimum_password">Worong Password</string>
    <string name="logout">Logout</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="someinfo">We just need your registered Email Id to send </string>
    <string name="someinfo1">you password reset instructions. </string>
    <string name="resetpass">Reset Passwprd</string>
    <string name="setting">Setting</string>
    <string name="registration">Registration</string>
    <string name="username">Enter Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="home">Home</string>
    <string name="additeam">AddIteam</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="vegetabelplan">Add Vegetable Plant</string>
    <string name="fruitplan">Add Fruit Plant</string>
    <string name="seeds">Add Seeds Of Plant</string>
    <string name="outdoorplant">Add Outdoor Plant</string>
    <string name="indoorplant">Add Indoor Plant</string>
    <string name="hyubridplant">Add Hybrid Plant</string>
    <string name="specialplant">Add Speical Plant</string>
    <string name="flowerplant">Add Flower Plant</string>
    <string name="flowername">Enter Flower Name</string>
    <string name="decription">Enter Decription Of Plant</string>
    <string name="price">Enter Price Of Plant</string>
    <string name="flower">Flower</string>
    <string name="fruit">Fruit</string>
    <string name="OutdoorPlant">OutdoorPlant</string>
    <string name="Indoorplant">Indoorplant</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="updatefruitplant">Update Fruit Plant</string>
    <string name="updateflowerplant">Update Flower Data</string>
    <string name="updateindoorplant">Update Indoor Plant Data</string>
    <string name="updateuser">Update User Profile</string>
    <string name="phone">Enter Phone Number</string>
    <string name="addacessories">Add Accessories</string>
    <string name="name">Enter Name</string>
    <string name="decription1">Enter Decription Of Acessorie</string>
    <string name="price1">Enter Price</string>
    <string name="addgarden">Add Garden Design</string>
    <string name="vegetabe">Vegetable Plant</string>
    <string name="hybrid">Hybrid Plant</string>
    <string name="special">Special Plant</string>
    <string name="seeds1">Seeds</string>
    <string name="updatevegeplant">Update Vegetable Plant</string>
    <string name="hybrid1">Update Hybrid Plant</string>
    <string name="updateseedplant">Update Seed Plant</string>
</resources>
