<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginBottom="60dp">
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"


    >
    <TableRow
        android:weightSum="2" >
        <android.support.v7.widget.CardView
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:id="@+id/additeam_flower"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:scaleType="centerCrop"
                android:src="@drawable/flowerplats"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="175dp"
                android:text="Add Flower Plant"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:textSize="20dp"

                android:gravity="center"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/additeam_vegetable"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
           >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:scaleType="centerCrop"
                android:src="@drawable/vegetableplant"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="175dp"
                android:text="@string/vegetabelplan"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:gravity="center"/>
        </android.support.v7.widget.CardView>
    </TableRow>
    <TableRow
        android:weightSum="2" >
        <android.support.v7.widget.CardView
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:layout_column="1"

            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            android:id="@+id/additeam_fruit"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:scaleType="centerCrop"
                android:src="@drawable/fruitplant"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="175dp"
                android:text="@string/fruitplan"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:gravity="center"/>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/additeam_seeds"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
          >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:scaleType="centerCrop"
                android:src="@drawable/seedsplant"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="175dp"
                android:text="@string/seeds"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:gravity="center"/>
        </android.support.v7.widget.CardView>
    </TableRow>
    <TableRow
        android:weightSum="2" >
        <android.support.v7.widget.CardView
            android:id="@+id/additeam_outdoor"
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:layout_column="1"

            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:scaleType="centerCrop"
                android:src="@drawable/outdoorplants"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="175dp"
                android:text="@string/outdoorplant"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:gravity="center"/>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/additeam_indoor"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:scaleType="centerCrop"
                android:src="@drawable/indoorplant"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="175dp"
                android:text="@string/indoorplant"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:gravity="center"/>
        </android.support.v7.widget.CardView>
    </TableRow>
    <TableRow
        android:weightSum="2"
        android:layout_marginBottom="20dp">

        <android.support.v7.widget.CardView
            android:id="@+id/additeam_hybrid"
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:layout_column="1"

            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hybridplant"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="175dp"
                android:text="@string/hyubridplant"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:gravity="center"/>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/additeam_special"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_column="2"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
         >
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:scaleType="centerCrop"
                android:src="@drawable/specialplant"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="175dp"
                android:text="@string/specialplant"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:gravity="center"/>
        </android.support.v7.widget.CardView>
    </TableRow>


</TableLayout>
</ScrollView>